--- a/home.html
+++ b/home.html
@@ -200,6 +200,7 @@
 											</p>
 										</li>
 								    </ul>
+									<br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -261,9 +262,17 @@
 										<a class="carousel-control-next" href="#carouselAutoPilotIndicators" role="button" data-slide="next">
 											<span class="carousel-control-next-icon" aria-hidden="true"></span>
 											<span class="sr-only">Next</span>
-										</a>
-									</div>
-
+										</a><br />
+										<h2>Tech Stack</h2>
+										<ul class="list-group">
+											<li class="list-group-item paraText">
+												Javascript
+											</li>
+											<li class="list-group-item paraText">
+												CasperJS
+											</li>
+										</ul>
+									</div><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/QA-Tool">Github Link</a><br />
 									<button class="close-modal">Close!</button>
 								</div>
@@ -316,7 +325,16 @@
 											<span id="carouselControlChatNext" class="carousel-control-next-icon" aria-hidden="true"></span>
 											<span class="sr-only">Next</span>
 										</a>
-									</div>
+									</div><br />
+									<h2>Tech Stack</h2>
+									<ul class="list-group">
+										<li class="list-group-item paraText">
+											Java
+										</li>
+										<li class="list-group-item paraText">
+											Parse database
+										</li>
+									</ul><br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -339,9 +357,18 @@
 								</div>
 								<div class="modal-body">
 									<p>
-										The database that stores the messenges were built with Java and the queries were coded in SQL.<br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/messengerSQL">Github Link</a>
-									</p>
+										The database that stores the messenges was built with Java and the queries were coded in SQL.<br />
+									</p><br />
+									<h2>Tech Stack</h2>
+									<ul class="list-group">
+										<li class="list-group-item paraText">
+											Java
+										</li>
+										<li class="list-group-item paraText">
+											mySQL
+										</li>
+									</ul><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/messengerSQL">Github Link</a><br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -366,8 +393,7 @@
 								<div class="modal-body">
 									<p>
 										This macro generates a monthly audit.
-										It dynamically scans the directory for the amount of zip files so that even when the amount changes, there is no need to modify the macro.<br />
-										<a class="paraTextGH" target="_blank" href="https://gist.github.com/rchen016/03624205a8cc1d3026745909ffb24ee0">Github Link</a>
+										It dynamically scans for correct User path and amount of zip files to process.<br />
 									</p>
 									<ol class="list-group">
 										<li class="list-group-item paraText">
@@ -382,7 +408,17 @@
 										<li class="list-group-item paraText">
 											Remove all raw data tabs so that the final report only has the needed information.
 										</li>
-									</ol>
+									</ol><br />
+									<h2>Tech Stack</h2>
+									<ul class="list-group">
+										<li class="list-group-item paraText">
+											Excel VBA
+										</li>
+										<li class="list-group-item paraText">
+											Box
+										</li>
+									</ul><br />
+									<a class="paraTextGH" target="_blank" href="https://gist.github.com/rchen016/03624205a8cc1d3026745909ffb24ee0">Github Link</a><br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -403,14 +439,23 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Audit Macros</h1>
-									<h4>VBA</h4>
+									<h1>Profile Site</h1>
+									<h4>HTML/CSS</h4>
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
-										This website was built with HTML and CSS. The layout was aligned with the Bootstrap 4 library. <br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/profilesite">Github Link</a>
-									</p>
+										This website was built to be a profile site that displays all my education and projects<br />
+									</p><br />
+									<h2>Tech Stack</h2>
+									<ul class="list-group">
+										<li class="list-group-item paraText">
+											HTML
+										</li>
+										<li class="list-group-item paraText">
+											CSS
+										</li>
+									</ul><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/profilesite">Github Link</a><bR />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -434,10 +479,28 @@
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
-										This website was built with ExpressJs, NodeJs, Bootstrap4 and various Node Libraries. <br />
-										<a class="paraTextGH" target="_blank" href="https://obscure-hollows-53067.herokuapp.com/">Site</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/fitnessApp">Github Link</a>
-									</p>
+										This website is a play on myFitnessPal. It allows users to browse a workout al carte, build workout list and store progress.<br />
+										<h2>Tech Stack</h2>
+										<ul class="list-group">
+											<li class="list-group-item paraText">
+												ExpressJS
+											</li>
+											<li class="list-group-item paraText">
+												NodeJS
+											</li>
+											<li class="list-group-item paraText">
+												JQuery
+											</li>
+											<li class="list-group-item paraText">
+												MongoDB (mLabs)
+											</li>
+											<li class="list-group-item paraText">
+												Heroku
+											</li>
+										</ul>
+									</p><br />
+									<a class="paraTextGH" target="_blank" href="https://obscure-hollows-53067.herokuapp.com/">Site</a><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/fitnessApp">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -461,10 +524,25 @@
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
-										This website was built with ExpressJs, NodeJs, Semantic and various Node Libraries. <br />
-										<a class="paraTextGH" target="_blank" href="https://dry-hollows-26971.herokuapp.com/blogs">Site</a><br />
-										<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/blogApp">Github Link</a>
-									</p>
+										This website was for fun where I am displaying the accolades of my favorite NBA player Carmleo. (Retiring soon) <br />
+										<h2>Tech Stack</h2>
+										<ul class="list-group">
+											<li class="list-group-item paraText">
+												ExpressJS
+											</li>
+											<li class="list-group-item paraText">
+												NodeJS
+											</li>
+											<li class="list-group-item paraText">
+												MongoDB (mLabs)
+											</li>
+											<li class="list-group-item paraText">
+												Heroku
+											</li>
+										</ul>
+									</p><br />
+									<a class="paraTextGH" target="_blank" href="https://dry-hollows-26971.herokuapp.com/blogs">Site</a><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/blogApp">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
