--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" crossorigin="anonymous"></script>
 		<script src="./js/fadeSection.js"></script>
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<title>Ricky Chen</title>
 	</head>
 	<body>
@@ -66,31 +67,28 @@
 					<div id="percentBars" class="col-12">
 						<div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="text-secondary">42%</span>
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>C++</b></div> <span class="text-secondary">42%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div> <span class="text-secondary">50%</span>
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"><b>Python</b></div> <span class="text-secondary">50%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 83%;" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div> <span class="text-secondary">83%</span>
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 83%;" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"><b>HTML/CSS/JS</b></div> <span class="text-secondary">83%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 68%;" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div> <span class="text-secondary">68%</span>
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 68%;" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100"><b>Excel VBA</b></div> <span class="text-secondary">68%</span>
 							</div>
 							<div class="progress skillmargin">
-								<div class="progress-bar bg-info" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div> <span class="text-secondary">42%</span>
+								<div class="progress-bar bg-secondary" role="progressbar" style="width: 42%;" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"><b>Excel</b></div> <span class="text-secondary">42%</span>
 							</div>
 						</div>
 					</div>
 				</div>
-			</section>
-
-			<section class="parallaxBottom" id="sectionTopInfo">
-				<div class="row">
-					<div id="educationBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
+				<div id="trio" class="row">
+					<div id="educationBlock" class="col-4 col-sm-4 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 						<a href="#" class="modalBtn" data-modal="eduModalName">
 							<div class="h1">
-								<i class="fa fa-graduation-cap text-secondary mb-4 eduModalBtn" aria-hidden="true"></i>
+								<i class="fa fa-graduation-cap text-light mb-4 eduModalBtn" aria-hidden="true"></i>
 							</div>
 						</a>
 						<div class="modal" id="eduModalName">
@@ -100,7 +98,7 @@
 									<h1>Classes Taken</h1>
 									<h4>
 										UC Riverside 2015<br />
-	  							  		Bachelor of Science in Computer Science <br />
+										Bachelor of Science in Computer Science <br />
 									</h4>
 								</div>
 								<div class="modal-body">
@@ -119,18 +117,18 @@
 										<li class="list-group-item paraText"><i aria-hidden="true"></i> Share on Instagram</li>
 										<li class="list-group-item paraText"><i aria-hidden="true"></i>Modeling and Simulation (CS 177)</li>
 										<li class="list-group-item paraText"><i aria-hidden="true"></i> Intro to Software Engineering (CS 180)</li>
-								    </ul>
+									</ul>
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
 						</div>
 						  <h3 class="h4 mb-4 text-center eduSectionText">Education</h3>
 					</div>
-					<div id="awardsBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
+					<div id="awardsBlock" class="col-4 col-sm-4 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 						<a href="#" class="modalBtn" data-modal="awardModalName">
-							<div class="h1"><i class="fa fa-award text-secondary mb-4" aria-hidden="true"></i></div>
+							<div class="h1"><i class="fa fa-award text-light mb-4" aria-hidden="true"></i></div>
 						</a>
-						<h3 class="h4 mb-4 text-center awardSectionText">Awards</h3>
+						<h3 class="h4 mb-4 text-center text-light awardSectionText">Awards</h3>
 						<div class="modal" id="awardModalName">
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
@@ -140,15 +138,15 @@
 								<div class="modal-body">
 									<ul class="list-group">
 										<li class="list-group-item paraText"><i aria-hidden="true"></i> Hearst Autos 2018 First Mover Award - Stellar Performance</li>
-								    </ul>
+									</ul>
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div id="experienceBlock" class="col-12 col-sm-6 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
+					<div id="experienceBlock" class="col-4 col-sm-4 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 						<a href="#" class="modalBtn" data-modal="expModalName">
-							<div class="h1"><i class="fa fa-briefcase text-secondary mb-4" aria-hidden="true"></i></div>
+							<div class="h1"><i class="fa fa-briefcase text-light mb-4" aria-hidden="true"></i></div>
 						</a>
 
 						<h3 class="h4 mb-4 text-center expSectionText">Experience</h3>
@@ -161,9 +159,9 @@
 								<div class="modal-body">
 									<ul class="list-group">
 										<li class="list-group-item"><i aria-hidden="true"></i>
-											<h3>CKE Restaurants Holdings INC</h3>
-											<h5>IT Security Intern</h5>
-											<h6 class="dateRange">Jul. 2014 - Sep. 2014</h6>
+											<h3 class="text-secondary">CKE Restaurants Holdings INC</h3>
+											<h5 class="text-secondary">IT Security Intern</h5>
+											<h6 class="dateRange text-secondary">Jul. 2014 - Sep. 2014</h6>
 											<p>
 												<ul class="list-group">
 													<li class="list-group-item paraText">
@@ -182,9 +180,9 @@
 											</p>
 										</li>
 										<li class="list-group-item"><i aria-hidden="true"></i>
-											<h3>Jumpstart - Subsidiary of Hearst Magazines</h3>
-											<h5>Technical Specialist</h5>
-											<h6 class="dateRange">Jun. 2015 - Present</h6>
+											<h3 class="text-secondary">Jumpstart - Subsidiary of Hearst Magazines</h3>
+											<h5 class="text-secondary">Technical Specialist</h5>
+											<h6 class="dateRange text-secondary">Jun. 2015 - Present</h6>
 											<p>
 												<ul class="list-group">
 													<li class="list-group-item paraText">
@@ -199,7 +197,7 @@
 												</ul>
 											</p>
 										</li>
-								    </ul>
+									</ul>
 									<br />
 									<button class="close-modal">Close!</button>
 								</div>
@@ -207,6 +205,10 @@
 						</div>
 					</div>
 				</div>
+			</section>
+
+			<section class="parallaxBottom" id="sectionTopInfo">
+
 				<span id="projectNavSpot"></span>
 				<div id="projectBoxes1" class="row">
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
@@ -282,7 +284,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project12Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/K6k3Gzw.png" alt="Card image cap">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Chatline - Java</h5>
 								</div>
@@ -343,7 +345,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project13Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/C5oBYev.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Messenger SQL - Java|SQL</h5>
 								</div>
@@ -464,9 +466,9 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project22Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/czGUYVR.png" alt="Card image cap">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/A65rjCy.png" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">myFitnessHomie- ExpressJs</h5>
+									<h5 class="card-title text-center display-5 paraText">In Progress</h5>
 								</div>
 							</div>
 						</a>
@@ -509,9 +511,9 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project23Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/8VrKchQ.png" alt="Card image cap">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/RT95QLh.jpg" alt="Card image cap">
 								<div class="card-body">
-									<h5 class="card-title text-center display-5 paraText">Melo Homage- ExpressJs</h5>
+									<h5 class="card-title text-center display-5 paraText">Carmelo Homage- ExpressJs</h5>
 								</div>
 							</div>
 						</a>
@@ -519,7 +521,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Melo Homage</h1>
+									<h1>Carmelo Homage</h1>
 									<h4>ExpressJs | NodeJs</h4>
 								</div>
 								<div class="modal-body">
@@ -556,21 +558,19 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</section>
 			</div>
 			<footer id="1234" class="bg-light">
 				<div class="row footStyle justify-content-center align-items-center">
-					<div class="col-6">
+					<div class="col-md-6">
 					  <ul class="list-inline">
 						<li class="list-inline-item">&copy; 2017 Ricky Chen</li>
 						<li class="list-inline-item">All rights reserved.</li>
 						<li class="list-inline-item">Terms of use and privacy policy</li>
 					  </ul>
 					</div>
-					<div class="col-6">
+					<div class="col-md-6">
 						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
 						<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
 						<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f text-secondary float-right contactIcon"></i></a>
