fixed project layout

--- a/home.html
+++ b/home.html
@@ -345,7 +345,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project13Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/C5oBYev.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/q6xb5GP.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Messenger SQL - Java|SQL</h5>
 								</div>
