added chatter project

--- a/home.html
+++ b/home.html
@@ -551,10 +551,47 @@
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
-						<div class="card">
-							<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5e1QaWX.png" alt="Card image cap">
-							<div class="card-body">
-								<h5 class="card-title text-center display-5 paraText">Project #- Language</h5>
+						<a href="#" class="modalBtn" data-modal="project24Name">
+							<div class="card">
+								<img class="card-img-top cardProjectImage11" src="https://images.unsplash.com/photo-1536312975196-2f175c3c0eed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=943&q=80" alt="Card image cap">
+								<div class="card-body">
+									<h5 class="card-title text-center display-5 paraText">In Progress</h5>
+								</div>
+							</div>
+						</a>
+						<div class="modal" id="project24Name">
+							<div class="modal-sandbox"></div>
+							<div class="modal-box">
+								<div class="modal-header">
+									<h1>Chatter</h1>
+									<h4>ExpressJs | NodeJs</h4>
+								</div>
+								<div class="modal-body">
+									<p class="paraText">
+										This is a website that I implemented to learn bidirectional and event-based communication. It's a simple texting app with all the essential features of credentials/friendlist/messaging.<br />
+										<h2>Tech Stack</h2>
+										<ul class="list-group">
+											<li class="list-group-item paraText">
+												ExpressJS
+											</li>
+											<li class="list-group-item paraText">
+												NodeJS
+											</li>
+											<li class="list-group-item paraText">
+												Socketio
+											</li>
+											<li class="list-group-item paraText">
+												MongoDB (mLabs)
+											</li>
+											<li class="list-group-item paraText">
+												Heroku
+											</li>
+										</ul>
+									</p><br />
+									<a class="paraTextGH" target="_blank" href="https://fierce-harbor-94742.herokuapp.com">Site</a><br />
+									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/chatter">Github Link</a> <br />
+									<button class="close-modal">Close!</button>
+								</div>
 							</div>
 						</div>
 					</div>
