--- a/home.html
+++ b/home.html
@@ -95,13 +95,14 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Classes Taken</h1>
-									<h4>
+
+									<h4 class="projectModalHeadersClass">
 										UC Riverside 2015<br />
 										Bachelor of Science in Computer Science <br />
 									</h4>
 								</div>
 								<div class="modal-body">
+									<h1 class="paraText">Classes Taken</h1>
 									<ul class="list-group">
 										<li class="list-group-item paraText"><i aria-hidden="true"></i> Machine Organisation & Assembly Programming (CS 61)</li>
 										<li class="list-group-item paraText"><i aria-hidden="true"></i> Software Construction (CS 100)</li>
@@ -133,7 +134,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Awards</h1>
+									<h1 class="projectModalHeaders">Awards</h1>
 								</div>
 								<div class="modal-body">
 									<ul class="list-group">
@@ -154,7 +155,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Work Experience</h1>
+									<h1 class="projectModalHeaders">Work Experience</h1>
 								</div>
 								<div class="modal-body">
 									<ul class="list-group">
@@ -224,11 +225,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>
-										Auto Pilot<br />
-										<h4>Javascript | CasperJs</h4>
-									</h1>
-
+									<h1 class="projectModalHeaders">Auto Pilot</h1>
 								</div>
 								<div class="modal-body">
 									<div id="carouselAutoPilotIndicators" class="carousel slide">
@@ -294,40 +291,12 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Chatline</h1>
-									<h4>Java</h4>
+									<h1 class="projectModalHeaders">Chatline</h1>
 								</div>
 								<div class="modal-body">
-									<div id="carouselChatIndicators" class="carousel slide">
-										<ol id="carouselIndicatorChat" class="carousel-indicators">
-											<li data-target="#carouselChatIndicators" data-slide-to="0" class="active"></li>
-											<li data-target="#carouselChatIndicators" data-slide-to="1"></li>
-										</ol>
-										<div class="carousel-inner">
-											<div class="carousel-item active">
-												<p class="paraText">
-													This project was built using the Parse backend. It has the simple features of login authentication. <br />
-													*Source: The GIF were created off videos found off documentation.
-												</p>
-												<img class="d-block" src="https://media.giphy.com/media/yxrLDfasPUGKhDkfKx/giphy.gif" alt="First slide">
-											</div>
-											<div class="carousel-item">
-												<p class="paraText">
-													The main feature of this application was a chatting feature that allows user to talk to different users they have added to their friend list. <br />
-													*Source: The GIF was created off videos found off documentation.
-												</p>
-												<img class="d-block" src="https://media.giphy.com/media/x4bXdlMv4zg0aqa5fm/giphy.gif" alt="Second slide">
-											</div>
-										</div>
-										<a class="carousel-control-prev" href="#carouselChatIndicators" role="button" data-slide="prev">
-											<span id="carouselControlChatPrev" class="carousel-control-prev-icon" aria-hidden="true"></span>
-											<span class="sr-only">Previous</span>
-										</a>
-										<a class="carousel-control-next" href="#carouselChatIndicators" role="button" data-slide="next">
-											<span id="carouselControlChatNext" class="carousel-control-next-icon" aria-hidden="true"></span>
-											<span class="sr-only">Next</span>
-										</a>
-									</div><br />
+									<p class="paraText">
+										This project was built using the Parse backend. This was a group project where I focused on the chatting aspect. It has the simple features of login authentication, chatting and video chat (api). <br />
+									</p>
 									<h2>Tech Stack</h2>
 									<ul class="list-group">
 										<li class="list-group-item paraText">
@@ -337,6 +306,7 @@
 											Parse database
 										</li>
 									</ul><br />
+									Disclaimer: No Github due to repo owner deleting the repo.
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -355,7 +325,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Messenger SQL - Java|SQL</h1>
+									<h1 class="projectModalHeaders">Messenger SQL</h1>
 								</div>
 								<div class="modal-body">
 									<p>
@@ -389,8 +359,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Audit Macros</h1>
-									<h4>VBA</h4>
+									<h1 class="projectModalHeaders">Audit Macros</h1>
 								</div>
 								<div class="modal-body">
 									<p>
@@ -441,8 +410,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Profile Site</h1>
-									<h4>HTML/CSS</h4>
+									<h1 class="projectModalHeaders">Profile Site</h1>
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
@@ -476,8 +444,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>myFitnessHomie</h1>
-									<h4>ExpressJs | NodeJs</h4>
+									<h1 class="projectModalHeaders">myFitnessHomie</h1>
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
@@ -521,8 +488,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Carmelo Homage</h1>
-									<h4>ExpressJs | NodeJs</h4>
+									<h1 class="projectModalHeaders">Carmelo Homage</h1>
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
@@ -563,8 +529,7 @@
 							<div class="modal-sandbox"></div>
 							<div class="modal-box">
 								<div class="modal-header">
-									<h1>Chatter</h1>
-									<h4>ExpressJs | NodeJs</h4>
+									<h1 class="projectModalHeaders">Chatter</h1>
 								</div>
 								<div class="modal-body">
 									<p class="paraText">
@@ -602,15 +567,17 @@
 				<div class="row footStyle justify-content-center align-items-center">
 					<div class="col-md-6">
 					  <ul class="list-inline">
-						<li class="list-inline-item">&copy; 2017 Ricky Chen</li>
-						<li class="list-inline-item">All rights reserved.</li>
-						<li class="list-inline-item">Terms of use and privacy policy</li>
+						<li class="socialMedia list-inline-item">&copy; 2017 Ricky Chen</li>
+						<li class="socialMedia list-inline-item">All rights reserved.</li>
+						<li class="socialMedia list-inline-item">Terms of use and privacy policy</li>
 					  </ul>
 					</div>
 					<div class="col-md-6">
-						<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
-						<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
-						<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f text-secondary float-right contactIcon"></i></a>
+						<div class="socialMedia">
+							<a href="https://www.facebook.com/ricky.chen.52090"><i class="fab fa-facebook-f text-secondary float-right contactIcon"></i></a>
+							<a href="mailto:rickychen10@gmail.com?Subject=Interview" target="_top"><i class="fa fa-envelope text-secondary float-right contactIcon"></i></a>
+							<a href="https://www.linkedin.com/in/ricky-chen-2b24b562"><i class="fab fa-linkedin-in text-secondary float-right contactIcon"></i></a>
+						</div>
 					</div>
 				</div>
 			</footer>
