fixed margin issue

--- a/home.html
+++ b/home.html
@@ -13,9 +13,8 @@
 		<title>Ricky Chen</title>
 	</head>
 	<body>
-		<div class="container containerOveride">
-			<!-- Nav Bar Start -->
-			<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top">
+			<div class="container containerOveride">
+				<nav class="navbar bg-secondary navbar-dark navbar-expand-md fixed-top"><!-- Nav Bar Start -->
 				<a class="navbar-brand" href="#">Welcome!</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -42,10 +41,10 @@
 						</li>
 				    </div>
 					</ul>
+					</nav><!-- Nav Bar End -->
 				</div>
-			</nav>
-				<!-- Nav Bar End -->
-			<div class="parentParallax">
+
+			<div class="desktopParallax containerOveride">
 				<section class="parallaxCover text-white d-flex justify-content-center align-items-center">
 					<div class="container text-center text-bottom">
 					  <h1 class="display-1 text-secondary text-uppercase paraText">Ricky Chen</h1>
@@ -56,7 +55,7 @@
 					</div>
 				</section>
 			</div>
-			<section id="sectionSkillBar" class="parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride">
+			<section id="sectionSkillBar" class="containerOveride parallaxSkill text-white d-flex justify-content-center align-items-center containerOveride">
 				<div class="row">
 					<div id="skilBar"  class="col-12">
 						<div class="container text-center text-bottom">
@@ -84,7 +83,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="trio" class="row">
+				<div id="trio" class="row trioIcon">
 					<div id="educationBlock" class="col-4 col-sm-4 col-lg-4 d-flex flex-column align-items-center mb-5 topper">
 						<a href="#" class="modalBtn" data-modal="eduModalName">
 							<div class="h1">
@@ -206,7 +205,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> <!-- Skill Parallax Desktop End -->
 
 			<section class="parallaxBottom" id="sectionTopInfo">
 
@@ -306,7 +305,7 @@
 											Parse database
 										</li>
 									</ul><br />
-									Disclaimer: No Github due to repo owner deleting the repo.
+									Disclaimer: No Github due to repo owner deleting the repo.<br />
 									<button class="close-modal">Close!</button>
 								</div>
 							</div>
@@ -563,7 +562,7 @@
 				</div>
 			</section>
 			</div>
-			<footer id="1234" class="bg-light">
+			<footer id="foot" class="bg-light">
 				<div class="row footStyle justify-content-center align-items-center">
 					<div class="col-md-6">
 					  <ul class="list-inline">
