fixed some mobile layout

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 							<a class="nav-link" href="#sectionSkillBar">Skills</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#sectionTopInfo">Info</a>
+							<a class="nav-link" href="#trio">Info</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#projectNavSpot">Projects</a>
@@ -214,7 +214,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project11Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/TbSBWFc.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/TbSBWFc.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">AutoPilot - JS</h5>
 								</div>
@@ -280,7 +280,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project12Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/5VNuEgk.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Chatline - Java</h5>
 								</div>
@@ -314,7 +314,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project13Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/q6xb5GP.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/q6xb5GP.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Messenger SQL - Java|SQL</h5>
 								</div>
@@ -348,7 +348,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project14Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/zn9s9s7.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/zn9s9s7.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Audit Macros - VBA</h5>
 								</div>
@@ -399,7 +399,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project21Name">
 							<div class="card" style="width>:100%;">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/pr2j46R.png" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/pr2j46R.png" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">This Webiste - HTML | CSS</h5>
 								</div>
@@ -433,7 +433,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project22Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/A65rjCy.png" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/A65rjCy.png" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">In Progress</h5>
 								</div>
@@ -467,7 +467,7 @@
 											</li>
 										</ul>
 									</p><br />
-									<a class="paraTextGH" target="_blank" href="https://obscure-hollows-53067.herokuapp.com/">Site</a><br />
+									<a class="paraTextGH" target="_blank" href="https://obscure-hollows-53067.herokuapp.com/">Site (Slow initial load because free Heroku)</a><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/fitnessApp">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
@@ -477,7 +477,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project23Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://i.imgur.com/RT95QLh.jpg" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://i.imgur.com/RT95QLh.jpg" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">Carmelo Homage- ExpressJs</h5>
 								</div>
@@ -508,7 +508,7 @@
 											</li>
 										</ul>
 									</p><br />
-									<a class="paraTextGH" target="_blank" href="https://dry-hollows-26971.herokuapp.com/blogs">Site</a><br />
+									<a class="paraTextGH" target="_blank" href="https://dry-hollows-26971.herokuapp.com/blogs">Site (Slow initial load because free Heroku)</a><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/blogApp">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
@@ -518,7 +518,7 @@
 					<div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-3">
 						<a href="#" class="modalBtn" data-modal="project24Name">
 							<div class="card">
-								<img class="card-img-top cardProjectImage11" src="https://images.unsplash.com/photo-1536312975196-2f175c3c0eed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=943&q=80" alt="Card image cap">
+								<img class="card-img-top cardProjectImage" src="https://images.unsplash.com/photo-1536312975196-2f175c3c0eed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=943&q=80" alt="Card image cap">
 								<div class="card-body">
 									<h5 class="card-title text-center display-5 paraText">In Progress</h5>
 								</div>
@@ -552,7 +552,7 @@
 											</li>
 										</ul>
 									</p><br />
-									<a class="paraTextGH" target="_blank" href="https://fierce-harbor-94742.herokuapp.com">Site</a><br />
+									<a class="paraTextGH" target="_blank" href="https://fierce-harbor-94742.herokuapp.com">Site (Slow initial load because free Heroku)</a><br />
 									<a class="paraTextGH" target="_blank" href="https://github.com/rchen016/chatter">Github Link</a> <br />
 									<button class="close-modal">Close!</button>
 								</div>
